objects/Demo_Overview__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Flow__c</fullName>
        <label>Chatter Flow</label>
        <length>25000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DEMO_ORG_SETUP__c</fullName>
        <label>DEMO ORG SETUP</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Force_com_Flow__c</fullName>
        <label>Force.com Flow</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Jigsaw_Flow__c</fullName>
        <label>Jigsaw Flow</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud_Flow__c</fullName>
        <label>Sales Cloud Flow</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Cloud_Flow__c</fullName>
        <label>Service Cloud Flow</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <label>Demo Overview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Demo Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>